--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,19 +6,21 @@
     # be checking to see if there is currently a user logged-in, and if there is,
     # we should show her a form that will allow her to send a tweet. If there is no
     # user logged-in, we should show the sign-in button.
-  %>
-  <% if @access_token %>
+    %>
+    <% if @access_token %>
     <div>
-      <p>
-        <strong>token:</strong> <%= @access_token.token %><br>
-        <strong>secret:</strong> <%= @access_token.secret %><br>
-      </p>
-      <p>
-        <button><a href="/sign_out">Sign Out</a></button>
-      </p>
-    </div>
+      <h3>You are tweeting as <%= @user.twitter_client.user.name %></h3>
+     <form id="form" method="post" action="/">
+      <input type="text" id="tweet_text" placeholder="your tweet" name="tweet_text">
+      <input type="submit" value="tweet">
+    </form>
+    <div id="success"></div>
+    <p>
+      <button><a href="/sign_out">Sign Out</a></button>
+    </p>
+  </div>
   <% else %>
-    <button><a href="/sign_in">Sign In with Twitter</a></button>
+  <button><a href="/sign_in">Sign In with Twitter</a></button>
   <% end %>
-  
+
 </div>
