--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,11 +1,370 @@
-.container {
-  margin: 20px auto;
-  width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+#wrapper {
+  min-width: 600px;
 }
 
-button a {
-  text-decoration: none;
-  color: black;
+.container {
+  min-height:100%;
+  margin: 20px auto;
+  width: 800px;
+  padding: 0px 20px 20px 20px;
+  /*border: 1px dotted black;*/
 }
+h1 {
+  font-size: 32pt;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  margin: 0;
+  text-shadow: 1px 1px 5px white;
+}
+
+h2 {
+  font-size: 28pt;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  margin: 0;
+  margin-bottom: 20px;
+  text-shadow: 1px 1px 5px white;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 100;
+  color: dimgray;
+  margin-bottom: 10px;
+}
+
+body {
+  height:100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+.content {
+  display: block;
+  width: 70%;
+  height: 100%;
+  min-height: 600px;
+  margin: 80px auto 0 auto;
+  top: 50px;
+  z-index: 50;
+}
+
+.home-container {
+  background-image: url("/doge_bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /*height: 90%;*/
+  min-height: 600px;
+  left: 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 50px;
+  z-index: 75;
+}
+
+.v-center-me {
+  /*much hack*/
+  width: 600px;
+  height: 40%;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.footer {
+  font-size: 12px;
+  font-weight: 100;
+  position: relative;
+  text-align: center;
+  /*top: 50px;*/
+  z-index: 100;
+}
+
+.nav {
+  position: absolute;
+  min-width: 700px;
+  width: 100%;
+  height: 50px;
+  top: 0;
+  font-weight: bold;
+  box-shadow: 0 0 10px gray;
+  z-index: 100;
+}
+
+.nav .brand, .nav .brand a {
+  margin-left: 25px;
+  font-size: 18pt;
+  text-decoration: none;
+  color: #444;
+  width: 60%;
+  display: inline-block;
+}
+
+
+
+.nav .logo img {
+  height: 35px;
+  float: left;
+  padding-right: 10px;
+}
+
+.brand:hover {
+  opacity: 0.7;
+}
+
+.nav ul {
+  display: inline-block;
+  width: 30%;
+  text-align: right;
+}
+
+.nav li {
+  margin-right: 25px;
+  display: inline;
+}
+
+a {
+  color: #eee;
+  text-decoration: none;
+  font-weight: 100;
+}
+
+.nav li a:hover {
+  opacity: 0.7;
+}
+
+form label {
+  font-weight: bold;
+  margin-right: 20px;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+.errors {
+  color: red;
+}
+
+form.quirks {
+  display: inline-block;
+}
+
+.submit {
+  text-align: center;
+}
+
+.label {
+  font-weight: bold;
+  float: left;
+  text-align: right;
+  margin-right: 20px;
+  width: 200px;
+}
+
+.survey-name {
+  display: inline-block;
+}
+
+.survey-link {
+  display: inline-block;
+}
+
+.survey-stats {
+  display: inline-block;
+}
+
+.adjustable {
+  background-color: #78F0D4; /*turquoise*/
+  display: inline-block;
+  width: 30px;
+}
+
+.question1 {
+  background-color: #E86E5C; /*salmon*/
+}
+
+.question2 {
+  background-color: #80C8F0; /*lightblue*/
+}
+
+.question3 {
+  background-color: #FA7B12; /*orange*/
+}
+
+.question4 {
+  background-color: #59CC0D; /*lightgreen*/
+}
+
+.question5 {
+  background-color: #FFBB20; /*yellow1*/
+}
+
+.question6 {
+  background-color: #A48AF0; /*lightpurple*/
+}
+
+.question7 {
+  background-color: #F071DE; /*pink*/
+}
+
+.question8 {
+  background-color: #F0E14C; /*yellow2*/
+}
+
+/*Formatting the buttons...*/
+
+input[type="submit"] {
+  background-color: #FA8805;
+  color: #eee;
+  text-shadow: 0 0 3px #663300;
+  border-radius: 5px;
+  border: 0px solid darkgray;
+  opacity: 1;
+}
+
+button {
+  background-color: #FA8805;
+  color: white;
+  text-shadow: 0 0 3px #663300;
+  border-radius: 5px;
+  border: 0px solid darkgray;
+  opacity: 1;
+  padding: 10px 20px;
+}
+
+/*button hover states*/
+
+input[type="submit"]:hover {
+  opacity: 0.7;
+}
+
+button:hover {
+  opacity: 0.85;
+  cursor: pointer;
+}
+
+button:disabled{
+  opacity: 0.5;
+  cursor:default;
+}
+
+/*radio button styling*/
+
+input[type="radio"] {
+  margin: 7px;
+}
+
+.question {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+
+
+#create-survey {
+  color: white;
+  display: block;
+  background-color: #FA8805;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid darkgray;
+  width: 300px;
+  text-shadow: 0 0 3px black;
+  opacity: 0.8;
+}
+
+#create-survey:hover {
+  opacity: 1;
+}
+
+#button-text {
+
+}
+
+#doge-container {
+  width: 400px;
+}
+
+.doge-carousel {
+  overflow:hidden;
+  width:100%;
+}
+
+.doge-frames {
+  position: relative;
+  /*width: 1000%;*/
+  /*set width with javascript to 100 * the number of questions + %*/
+  overflow: hidden;
+  left: 0%;
+}
+
+.doge-item {
+  position: relative;
+  /*width: 10%;*/
+  /*set width with javascript to 100 / the number of questions + %*/
+  float: left;
+}
+
+#question-and-buttons {
+  width: 355px;
+  margin-left: auto;
+  margin-right:auto;
+  /*text-align: center;*/
+}
+
+input[type="text"] {
+  width: 450px;
+}
+
+#title-border {
+
+  border-bottom: 1px solid gray;
+  margin-left: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  width: 355px;
+}
+
+.survey-name {
+  padding: 5px 0 5px 0;
+  color: #333333;
+  font-weight: 400;
+}
+
+.minus {
+  height: 1em;
+  line-height: 0.7em;
+  margin: 0;
+  padding: 0 0 0.3em 0.5em;
+  vertical-align: middle;
+  width: 1em;
+}
+
+.next-option {
+/*  background-color: #000080;
+*/}
+
+.next-question {
+  background-color: #008080;
+}
+
+#doge-rotator {
+
+}
+
+#doge-rotator img {
+  text-align: center;
+  width:64px;
+  height:64px;
+}
+
+tr {
+  border-top: 1px solid lightgray;
+}
+
+td {
+  padding: 5px;
+}
+
